--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <input placeholder="password" type="password" id="password"> 
                     
                     
-                    <div class="FormInfo">
+                    <!-- <div class="FormInfo">
                         <h4>Select your gender</h4>
                         <div>
                             <input type="radio" name="gender" value="male" id="">Male 
@@ -51,7 +51,7 @@
 
                   <div class="FormInfo">
                     <textarea rows="8" cols="40" placeholder="Write your massage"></textarea>
-                  </div>
+                  </div> -->
 
                   <div class="FormButton">
                     <button class="btn-1" type="submit" value="Submit">Submit</button>
